[package]
name = "high_frequency_order_book"
version = "0.1.0"
authors = ["Brett Fazio <brett.fazio@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
criterion = "0.3"

[[bench]]
name = "score_benchmark"
path = "src/score_benchmark.rs"
harness = false